@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2005 Stephen Colebourne
+ *  Copyright 2001-2006 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -161,7 +161,10 @@ public abstract class AbstractInterval implements ReadableInterval {
         long otherEnd = interval.getEndMillis();
         long thisStart = getStartMillis();
         long thisEnd = getEndMillis();
-        return (thisStart < otherEnd && otherStart < thisEnd);
+        
+        return (thisStart < otherEnd && otherStart < thisEnd) ||
+            (thisStart == otherStart &&
+                    (thisStart == thisEnd || otherStart == otherEnd));
     }
 
     //-----------------------------------------------------------------------
