@@ -1,5 +1,5 @@
 /*
- *  Copyright 2001-2005 Stephen Colebourne
+ *  Copyright 2001-2006 Stephen Colebourne
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -231,6 +231,13 @@ public class TestMutableInterval_Basics extends TestCase {
     public void testContains_RInterval() {
         MutableInterval test = new MutableInterval(TEST_TIME1, TEST_TIME2);
         
+        assertEquals(true, test.contains(new Interval(TEST_TIME1, TEST_TIME1)));
+        assertEquals(false, test.contains(new Interval(TEST_TIME1 - 1, TEST_TIME1)));
+        
+        assertEquals(true, test.contains(new Interval(TEST_TIME1, TEST_TIME1 + 1)));
+        assertEquals(false, test.contains(new Interval(TEST_TIME1 - 1, TEST_TIME1 + 1)));
+        assertEquals(true, test.contains(new Interval(TEST_TIME1 + 1, TEST_TIME1 + 1)));
+        
         assertEquals(true, test.contains(new Interval(TEST_TIME1, TEST_TIME2)));
         assertEquals(false, test.contains(new Interval(TEST_TIME1 - 1, TEST_TIME2)));
         assertEquals(true, test.contains(new Interval(TEST_TIME1 + (TEST_TIME2 - TEST_TIME1) / 2, TEST_TIME2)));
@@ -256,6 +263,13 @@ public class TestMutableInterval_Basics extends TestCase {
     public void testOverlaps_RInterval() {
         MutableInterval test = new MutableInterval(TEST_TIME1, TEST_TIME2);
         
+        assertEquals(true, test.overlaps(new Interval(TEST_TIME1, TEST_TIME1)));
+        assertEquals(false, test.overlaps(new Interval(TEST_TIME1 - 1, TEST_TIME1)));
+        
+        assertEquals(true, test.overlaps(new Interval(TEST_TIME1, TEST_TIME1 + 1)));
+        assertEquals(true, test.overlaps(new Interval(TEST_TIME1 - 1, TEST_TIME1 + 1)));
+        assertEquals(true, test.overlaps(new Interval(TEST_TIME1 + 1, TEST_TIME1 + 1)));
+        
         assertEquals(true, test.overlaps(new Interval(TEST_TIME1, TEST_TIME2)));
         assertEquals(true, test.overlaps(new Interval(TEST_TIME1 - 1, TEST_TIME2)));
         assertEquals(true, test.overlaps(new Interval(TEST_TIME1 + (TEST_TIME2 - TEST_TIME1) / 2, TEST_TIME2)));
@@ -273,6 +287,11 @@ public class TestMutableInterval_Basics extends TestCase {
         assertEquals(true, test.overlaps(new Interval(TEST_TIME1 - 1, TEST_TIME1 + 1)));
         
         assertEquals(true, test.overlaps((ReadableInterval) null));
+        
+        MutableInterval empty = new MutableInterval(TEST_TIME1, TEST_TIME1);
+        assertEquals(true, empty.overlaps(empty));
+        assertEquals(true, empty.overlaps(test));
+        assertEquals(true, test.overlaps(empty));
     }
 
     //-----------------------------------------------------------------------
